--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 <div class="card">
   <h2>Profiles</h2>
   <ul class="list">
-    <li><a href="#" title="Add your profile URL">Google Scholar</a></li>
+    <li><a href="#" title="https://scholar.google.co.in/citations?user=OhnJPekAAAAJ&hl=en">Google Scholar</a></li>
     <li><a href="#" title="Add your profile URL">LinkedIn</a></li>
     <li><a href="#" title="Add your profile URL">ResearchGate</a></li>
   </ul>
