--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     
 <h1>Contact</h1>
 <div class="card">
-  <p><strong>Office:</strong> Department of Production Engineering, National Institute of Technology, Tiruchirappalli – 620015, India</p>
+  <p><strong>Office:</strong> MTB 203, Department of Production Engineering, National Institute of Technology, Tiruchirappalli – 620015, India</p>
   <p><strong>Email:</strong> pkiitr87@gmail.com &nbsp;|&nbsp; prakashkumar@nitt.edu</p>
   <p><strong>Phone:</strong> +91-8791560614 &nbsp;|&nbsp; +91-8789250832</p>
 </div>
